--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,7 @@
     </header>
     <main>
       <h2>cookies Available for sales:</h2>
-      <div id="cookies">
+      <div id="locations">
       
         <!-- generate this from js: -->
         <!-- <article>
@@ -20,46 +20,7 @@
           </ul>
           <img>
         </article> -->
-      </div>
-      <div id="cookies2">
-           <!-- generate this from js: -->
-        <!-- <article>
-
-          <ul>
-            <li></li>
-          </ul>
-          <img>
-        </article> -->
-      </div>
-      <div id="cookies3">
-        <!-- generate this from js: -->
-     <!-- <article>
-
-       <ul>
-         <li></li>
-       </ul>
-       <img>
-     </article> -->
-   </div>
-   <div id="cookies4">
-    <!-- generate this from js: -->
- <!-- <article>
-
-   <ul>
-     <li></li>
-   </ul>
-   <img>
- </article> -->
-</div>
-<div id="cookies5">
-    <!-- generate this from js: -->
- <!-- <article>
-
-   <ul>
-     <li></li>
-   </ul>
-   <img>
- </article> -->
+      
 </div>
 
 
