--- a/sales.html
+++ b/sales.html
@@ -25,7 +25,7 @@
              <br>
              <br>
              <input type="number" id="MinHourlyCuostmers" name ="MinHourlyCuostmers" min="1" required >
-             <label for="MinHourlyCuostmers"> Mminumum Hourly Coustumers </label>
+             <label for="MinHourlyCuostmers"> Minimum Hourly Coustumers </label>
              <br>
              <br>
              <input type="number" id="MaxHourlyCoustmers" name = "MaxHourlyCoustmers" min = "1" required>
